deployment_canary.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: motd-canary-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: motd
  template:
    metadata:
      labels:
        app: motd
    spec:
      containers:
      - name: motd
        image: blot32u/motd-api
