cluster-ip.yml
apiVersion: v1
kind: Service
metadata:
  name: motd-canary-service
spec:
  selector:
    app: motd
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000  # Port sur lequel le pod écoute
  type: ClusterIP
