loadbalancer.yml
apiVersion: v1
kind: Service
metadata:
  name: service-motd-loadbalancer
spec:
  selector:
    app: motd
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000  
  type: LoadBalancer
